--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.1.6",
     "@prisma/client": "^5.16.0",
+    "@serwist/next": "^9.0.3",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
@@ -22,6 +23,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "prisma": "^5.16.0",
+    "serwist": "^9.0.3",
     "typescript": "^5"
   }
 }
